# aubo

./: .clang-format  .gitignore  CHANGELOG.md  README.md
doc/: ARCS_SDK_completion.md  interface_develop_step.md
example/: tp_circle_01.lua  tp_circle_02.lua  tp_demo_01.lua  tp_moveJ_01.lua  tp_moveJspeed_01.lua  tp_moveJspeed_02.lua  tp_moveLspeed_01.lua  tp_square200_01.lua
include/aubo/: aubo_api.h  math.h  register_control.h  robot_interface.h  runtime_machine.h  serial.h  socket.h  sync_move.h  system_info.h  trace.h  type_def.h
include/aubo/axes/: README.md  axes.h
include/aubo/error_stack/: error_stack.h  hal_error.h  rtm_error.h  system_error.h
include/aubo/robot/: force_control.h  io_control.h  motion_control.h  robot_algorithm.h  robot_config.h  robot_manage.h  robot_state.h
include/bindings/: function_traits.h
include/bindings/impl/: pimpl.h
include/bindings/javascript/: .npmignore  javascript_test_writer.h  javascript_writer.h
include/bindings/jsonrpc/: json_types.h  jsonrpc_client.hpp  jsonrpc_service.hpp  jsonrpccxx_ex.h
include/bindings/lua/: aubo_control_api.h  math.h  register_control.h  robot_interface.h  runtime_machine.h  serial.h  socket.h  system_info.h  utils.h
include/bindings/lua/robot/: force_control.h  io_control.h  motion_control.h  robot_algorithm.h  robot_config.h  robot_manage.h  robot_state.h  sync_move.h  trace.h
include/bindings/mock/: fake_robot_interface.hpp
include/bindings/rtde/: rtde_encode.h  rtde_recipe.h
include/contribution/: README.md  extension.h  logging.h  service.h
include/contribution/algorithm/: dynamics.h  kinematics.h  model.h  otg.h  tp.h
include/contribution/device/: agv.h  io.h  robot.h  sensor.h
preprocessor/: CMakeLists.txt  code_translator.cpp  code_translator.h  main.cpp
test/: CMakeLists.txt  force_control_test.cpp  inmemoryconnector.hpp  io_control_test.cpp  mock_common.cpp  mock_common.h  motion_control_test.cpp  robot_algorithm_test.cpp  robot_config_test.cpp  robot_manage_test.cpp  robot_state_test.cpp  runtime_machine_test.cpp  sync_move_test.cpp
